--- a/Todo.html
+++ b/Todo.html
@@ -17,7 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
-    <title>Hello, world!</title>
+    <title>Todo list</title>
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Salsa&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caprasimo&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Salsa&display=swap');
